--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="css/final_style.css">
+    <title>About</title>
 </head>
 <body>
     <a class = "skip" href="#main">Skip to Main Content</a>
@@ -16,24 +17,50 @@
                 <li><a href = "hobby.html" >Hobby Work</a></li>
             </ul>
         </nav>
-        <h1>About Me: Ambika Tripathi</h1>
+        <div class="center">
+            <h1>About Me</h1>
+            <h2>Hello there! My name is Ambika</h2> 
+        </div>
     </header>
     
-    <main id = "main">
-        <img src = "images/realbika.png" alt="picture of ambika in strawberry field" width="500">
-        <p>Hello there! My name is Ambika, I'm a junior at the University of Michigan School of Information.
-            Ever since the ripe age of 8, I've always loved drawing. Since then, it's been my anchor-- really
-            the only constant in my life. Check out my work here! <br>
-        </p>
-        <img src = "images/ambika michdily.png" alt="cartoon ambika reading newspaper" width="500">
-        <br>
-        <a href="michigan_daily.html"><button>Michigan Daily</button></a> 
-        <br>
-        <img src = "images/cartoonbika.png" alt="cartoon ambika" width="500">
-        <br>
-        <a href="hobby.html"><button>Hobby Work</button></a> 
 
+
+
+    <main id = "main">
+        <div class="about">
+            <img src = "images/realbika.png" class="about_image" alt="picture of ambika in strawberry field" width="500">
+            <p>I'm a junior at the University of Michigan School of Information.
+                I've been drawing since the ripe age of 8. I've explored and experimented with multiple different styles before
+                settling on simple cartoon style that's reflected in my work with the Michigan Daily. <br> <br>  Check out my work here! <br>
+            </p>
+        </div>
+        <div class="sidebyside">
+                <img src = "images/ambika michdily.png" class="about_image" alt="cartoon ambika reading newspaper" width="500">
+                <a href="michigan_daily.html"><button>Michigan Daily</button></a>
+                <img src = "images/cartoonbika.png" class="about_image" alt="cartoon ambika" width="500">
+                <a href="hobby.html"><button>Hobby Work</button></a> 
+        </div>
     </main>
+    <script src="js/final_js"></script>
+
+    <!-- <main id = "main">
+        <div class="center">
+            <img src = "images/realbika.png" class="about_image" alt="picture of ambika in strawberry field" width="500">
+            <p>Hello there! My name is Ambika, I'm a junior at the University of Michigan School of Information. <br>
+                Ever since the ripe age of 8, I've always loved drawing. Since then, it's been my anchor-- really
+                the only constant in my life. <br> Check out my work here! <br>
+            </p>
+        </div>
+        <div class="sidebyside">
+                <img src = "images/ambika michdily.png" class="about_image" alt="cartoon ambika reading newspaper" width="500">
+                <br>
+                <a href="michigan_daily.html"><button>Michigan Daily</button></a> 
+                <br>
+                <img src = "images/cartoonbika.png" class="about_image" alt="cartoon ambika" width="500">
+                <br>
+                <a href="hobby.html"><button>Hobby Work</button></a> 
+        </div>
+    </main> -->
 
     <footer>
         <p>Ambika Tripathi <br></p>
