--- a/michigan_daily.html
+++ b/michigan_daily.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="css/final_style.css">
+    <title>Michigan Daily</title>
 </head>
 <body>
     <a class = "skip" href="#main">Skip to Main Content</a>
@@ -16,17 +17,23 @@
                 <li><a href = "hobby.html" >Hobby Work</a></li>
             </ul>
         </nav>
-        <h1>Michigan Daily</h1>
     </header>
     <main id = "main">
-        <img src = "images/ambika michdily.png" alt="cartoon ambika reading newspaper" width="500">
-        <br>
-        <p>Coming into college I knew I wouldn't have a lot of time to draw for fun, but I knew I still wanted
-            an outlet for myself to continue drawing despite this. I joined the Michigan Daily as a cartoonist
-            in order to ensure that I could still ensure I had time to draw between my college work. <br> Here are 
-            some of my favorite cartoons I've done for the Daily: <br>
-        </p>
-        <div class="gallery"> 
+        <div class="center">
+            <h1>Michigan Daily</h1>
+        </div>
+        <div class="center">
+            <div class="news">
+                <img src = "images/ambika michdily.png" alt="cartoon ambika reading newspaper" width="500">
+            </div>
+            <br>
+            <p>Coming into college I knew I wouldn't have a lot of time to draw for fun, but I knew I still wanted
+                an outlet for myself to continue drawing despite this. I joined the Michigan Daily as a cartoonist
+                in order to ensure I still had time to draw between my college work. <br> <br> Here are 
+                some of my favorite cartoons I've done for the Daily: <br>
+            </p>
+    </div>
+        <div class="newspaper_gallery"> 
             <img id="image1" src="images/daily1.jpg" alt="mark schlissel lonely m" width="500"/>
             <img id="image2" src="images/daily2.png" alt="halloween cartoon about exams" width="500"/>
             <img id="image3" src="images/daily3.jpg" alt="snow fall" width="500"/>
@@ -41,7 +48,7 @@
 
 
     </main>
-
+    <script src="js/final_js"></script>
 
     <footer>
         <p>Ambika Tripathi <br></p>
