--- a/hobby.html
+++ b/hobby.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="css/final_style.css">
+    <title>Hobby Work</title>
 </head>
 <body>
     <a class = "skip" href="#main">Skip to Main Content</a>
@@ -16,29 +17,33 @@
                 <li class="active"><a href = "hobby.html" >Hobby Work</a></li>
             </ul>
         </nav>
-        <h1>Hobby Work</h1>
     </header>
     <main id = "main">
-        <img src = "images/cartoonbika.png" alt="cartoon ambika" width="500">
-        <br>
-        <p>Apart from the Daily, I do quite a bit of work for myself. This ranges from doing studies from random images I find online, 
-            scenes redrawn from movies or shows, and other random things that creep into my brain and onto a (digital) canvas. Here are 
-            some of my favorite pieces!: <br>
-        </p>
-        <div class="gallery"> 
+        <div class="center">
+            <h1>Hobby Work</h1>
+        </div>  
+        <div class="center">
+            <img src = "images/cartoonbika.png" alt="cartoon ambika" width="500">
+            <br>
+            <p>Apart from the Daily, I do quite a bit of work for myself. This ranges from doing studies from random images I find online, 
+                scenes redrawn from movies or shows, and other random things that creep into my brain and onto a (digital) canvas. Here are 
+                some of my favorite pieces!: <br>
+            </p>
+        </div>
+        <div class="hobby_gallery"> 
             <img id="image1" src="images/hobby1.png" alt="cartoon ambika in distress" width="500"/>
-            <img id="image2" src="images/hobby2.png" alt="man playing violin" width="500"/>
+            <img id="image2" src="images/hobby9.png" alt="cartoon ambika in distress" width="500"/>
             <img id="image3" src="images/hobby3.png" alt="spiderman shocked" width="500"/>
-            <img id="image4" src="images/hobby4.png" alt="girl with flowers and hat" width="500"/>
+            <img id="image4" src="images/hobby2.png" alt="man playing violin" width="500"/>
             <img id="image5" src="images/hobby5.png" alt="avatar the last airbender: aang leaving the southern air temple" width="500"/>
             <img id="image6" src="images/hobby6.png" alt="ambika's sister and dad drawings" width="500"/>
             <img id="image7" src="images/hobby7.png" alt="spooky girl" width="500"/>
             <img id="image8" src="images/hobby8.png" alt="frenemies" width="500"/>
-            <img id="image9" src="images/hobby9.png" alt="cartoon ambika in distress" width="500"/>
+            <img id="image9" src="images/hobby4.png" alt="girl with flowers and hat" width="500"/>
           </div>
 
     </main>
-
+    <script src="js/final_js"></script>
 
 
     <footer>
