--- a/hobby.html
+++ b/hobby.html
@@ -15,6 +15,7 @@
                 <li><a href = "index.html" >About Me</a></li>
                 <li><a href = "michigan_daily.html" >Michigan Daily</a></li>
                 <li class="active"><a href = "hobby.html" >Hobby Work</a></li>
+                <li><a href = "contact.html">Contact Me</a></li>
             </ul>
         </nav>
     </header>
@@ -31,15 +32,15 @@
             </p>
         </div>
         <div class="hobby_gallery"> 
-            <img id="image1" src="images/hobby1.png" alt="cartoon ambika in distress" width="500"/>
-            <img id="image2" src="images/hobby9.png" alt="cartoon ambika in distress" width="500"/>
-            <img id="image3" src="images/hobby3.png" alt="spiderman shocked" width="500"/>
-            <img id="image4" src="images/hobby2.png" alt="man playing violin" width="500"/>
-            <img id="image5" src="images/hobby5.png" alt="avatar the last airbender: aang leaving the southern air temple" width="500"/>
-            <img id="image6" src="images/hobby6.png" alt="ambika's sister and dad drawings" width="500"/>
-            <img id="image7" src="images/hobby7.png" alt="spooky girl" width="500"/>
-            <img id="image8" src="images/hobby8.png" alt="frenemies" width="500"/>
-            <img id="image9" src="images/hobby4.png" alt="girl with flowers and hat" width="500"/>
+            <img id="image1" src="images/hobby1.png" data-lightbox="hobby" alt="cartoon ambika in distress" width="500"/>
+            <img id="image2" src="images/hobby9.png" data-lightbox="hobby" alt="cartoon ambika in distress" width="500"/>
+            <img id="image3" src="images/hobby3.png" data-lightbox="hobby" alt="spiderman shocked" width="500"/>
+            <img id="image4" src="images/hobby2.png" data-lightbox="hobby" alt="man playing violin" width="500"/>
+            <img id="image5" src="images/hobby5.png" data-lightbox="hobby" alt="avatar the last airbender: aang leaving the southern air temple" width="500"/>
+            <img id="image6" src="images/hobby6.png" data-lightbox="hobby" alt="ambika's sister and dad drawings" width="500"/>
+            <img id="image7" src="images/hobby7.png" data-lightbox="hobby" alt="spooky girl" width="500"/>
+            <img id="image8" src="images/hobby8.png" data-lightbox="hobby" alt="frenemies" width="500"/>
+            <img id="image9" src="images/hobby4.png" data-lightbox="hobby" alt="girl with flowers and hat" width="500"/>
           </div>
 
     </main>
