--- a/index.html
+++ b/index.html
@@ -11,22 +11,34 @@
     <a class = "skip" href="#main">Skip to Main Content</a>
     <header>
         <nav>
+            <!-- <div id="navigation" class="sidenav">
+                <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+                <ul>
+                <li class="active"><a href="index.html">About Me</a></li>
+                <li><a href="michigan_daily.html">Michigan Daily</a></li>
+                <li><a href="hobby.html">Hobby Work</a></li>
+                <li><a href="contact.html">Contact Me</a></li>
+                </ul>
+              </div> -->
+
             <ul>
                 <li class="active"><a href = "index.html" >About Me</a></li>
                 <li><a href = "michigan_daily.html" >Michigan Daily</a></li>
                 <li><a href = "hobby.html" >Hobby Work</a></li>
+                <li><a href = "contact.html">Contact Me</a></li>
             </ul>
         </nav>
-        <div class="center">
-            <h1>About Me</h1>
-            <h2>Hello there! My name is Ambika</h2> 
-        </div>
+        <!-- <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; open</span> -->
     </header>
     
 
 
 
     <main id = "main">
+        <div class="center">
+            <h1>About Me</h1>
+            <h2>Hello there! My name is Ambika</h2> 
+        </div>
         <div class="about">
             <img src = "images/realbika.png" class="about_image" alt="picture of ambika in strawberry field" width="500">
             <p>I'm a junior at the University of Michigan School of Information.
