--- a/michigan_daily.html
+++ b/michigan_daily.html
@@ -15,6 +15,7 @@
                 <li><a href = "index.html" >About Me</a></li>
                 <li class="active"><a href = "michigan_daily.html" >Michigan Daily</a></li>
                 <li><a href = "hobby.html" >Hobby Work</a></li>
+                <li><a href = "contact.html">Contact Me</a></li>
             </ul>
         </nav>
     </header>
