--- a/hobby.html
+++ b/hobby.html
@@ -10,7 +10,7 @@
 <body>
     <a class = "skip" href="#main">Skip to Main Content</a>
     <header>
-        <nav>
+        <nav id="notmobile">
             <ul>
                 <li><a href = "index.html" >About Me</a></li>
                 <li><a href = "michigan_daily.html" >Michigan Daily</a></li>
@@ -18,6 +18,20 @@
                 <li><a href = "contact.html">Contact Me</a></li>
             </ul>
         </nav>
+
+        <input type="checkbox" id="hamburger-input" class="burger-shower" />
+        <label id="hamburger-menu" for="hamburger-input">
+        <nav id="sidebar-menu">
+            <ul>
+            <li><a href="index.html">About Me</a></li>
+            <li><a href="michigan_daily.html">Michigan Daily</a></li>
+            <li class="active"><a href="hobby.html">Hobby Work</a></li>
+            <li><a href="contact.html">Contact Me</a></li>
+            </ul>
+        </nav>
+        </label>
+
+        <div class="overlay"></div>
     </header>
     <main id = "main">
         <div class="center">
