--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <main id = "main">
         <div class="center">
             <h1>About Me</h1>
-            <h2>Hello there! My name is Ambika</h2> 
+            <h2 class="typewriter">Hello there! My name is Ambika</h2> 
         </div>
         <div class="about">
             <img src = "images/realbika.png" class="about_image" alt="picture of ambika in strawberry field" width="500">
