--- a/hobby.html
+++ b/hobby.html
@@ -52,8 +52,8 @@
             <img id="image4" src="images/hobby2.png" data-lightbox="hobby" alt="man playing violin" width="500"/>
             <img id="image5" src="images/hobby5.png" data-lightbox="hobby" alt="avatar the last airbender: aang leaving the southern air temple" width="500"/>
             <img id="image6" src="images/hobby6.png" data-lightbox="hobby" alt="ambika's sister and dad drawings" width="500"/>
-            <img id="image7" src="images/hobby7.png" data-lightbox="hobby" alt="spooky girl" width="500"/>
-            <img id="image8" src="images/hobby8.png" data-lightbox="hobby" alt="frenemies" width="500"/>
+            <img id="image7" src="images/hobby7.png" data-lightbox="hobby" alt="koala" width="500"/>
+            <img id="image8" src="images/hobby8.png" data-lightbox="hobby" alt="person in forest" width="500"/>
             <img id="image9" src="images/hobby4.png" data-lightbox="hobby" alt="girl with flowers and hat" width="500"/>
           </div>
 
